#22 adding status to project when making new project